--- a/goodAtMath.html
+++ b/goodAtMath.html
@@ -82,15 +82,16 @@ body {
     cursor: pointer;
 }
 #vars .var .var-name {
-    width: 33%;
+    width: 28%;
 }
 #vars .var .var-value {
-    width: 60%;
+    width: 65%;
 }
 
 #history .history-record {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 0.5rem;
 }
 #history .history-record .history-copy {
     width: 1rem;
